--- a/src/NzbDrone/Radarr.csproj
+++ b/src/NzbDrone/Radarr.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFrameworks>net462;netcoreapp3.1</TargetFrameworks>
-    <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win-x64;win-x86</RuntimeIdentifiers>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>..\NzbDrone.Host\Radarr.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
